--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "axios": "^0.21.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-modal": "^3.14.3",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
@@ -41,7 +43,9 @@
     ]
   },
   "devDependencies": {
+    "@types/react-modal": "^3.12.1",
     "@types/styled-components": "^5.1.12",
+    "miragejs": "^0.1.41",
     "styled-components": "^5.3.0"
   }
 }
